<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.FragmentNuevaPelicula">


    <ImageView
        android:id="@+id/imageViewNuevaPelicula"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/ic_director"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextNuevaTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/titulo"
                android:singleLine="true"
                android:layout_margin="10dp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editTextNuevaAnho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaTitulo"
                android:hint="@string/anho"
                android:singleLine="true"
                android:inputType="number" />


            <EditText
                android:id="@+id/editTextNuevaDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaAnho"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:hint="@string/director" />


            <EditText
                android:id="@+id/editTextNuevaPuntuacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaDirector"
                android:hint="@string/puntos"
                android:inputType="numberDecimal" />


            <EditText
                android:id="@+id/editTextNuevaUrlImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaPuntuacion"
                android:hint="@string/url"
                android:inputType="textPersonName"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/editTextNuevaSinopsis"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaUrlImagen"
                android:inputType="textPersonName"
                android:hint="@string/sinopsis" />

            <Button
                android:id="@+id/buttonNuevaInsertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insertar"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNuevaSinopsis" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>