<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.FragmentDetalle">


    <ImageView
        android:id="@+id/imageViewDetallePelicula"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:src="@drawable/ic_director"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageViewDetalleEstrella"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textViewDetalleTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/textViewDetalleDirector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetalleTitulo"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textViewDetalleSinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sinopsis"
                android:textSize="15sp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewDetalleDirector"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imageViewDetalleCriticas"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/criticas"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageViewDetallePapelera" />


            <ImageView
                android:id="@+id/imageViewDetallePapelera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/papelera"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>


